--- a/SplitViewMenuUWP/SplitViewMenuUWP/App.xaml
+++ b/SplitViewMenuUWP/SplitViewMenuUWP/App.xaml
@@ -4,5 +4,11 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:SplitViewMenuUWP"
     RequestedTheme="Light">
-
+    <Application.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="ms-appx:///SplitViewMenu/Themes/SplitViewMenuBrushes.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </Application.Resources>
 </Application>
